Fixed the code block white space issue

--- a/website/src/css/customTheme.css
+++ b/website/src/css/customTheme.css
@@ -143,7 +143,6 @@ pre code
   padding: 1.25rem 1.5rem;
   font-size: 85%;
   overflow-x: auto;
-  white-space: nowrap;
   word-break: normal;
   word-wrap: normal;
 }
